# webgateway

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  project.toml
.github/workflows/: build.yml
assets/error_pages/: index.html  package.json
assets/ipdb/: city_code_mappings  country_code_mappings
crates/dnsprovider/: Cargo.toml
crates/dnsprovider/src/: base.rs  dnspod.rs  error.rs  lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: foundation.rs  main.rs  proxy.rs  state.rs  sync.rs
crates/gateway/src/proxy/: backends.rs  protocols.rs
crates/shared/: Cargo.toml
crates/shared/src/: database.rs  default.rs  lib.rs  listener.rs  logger.rs  mnt_protocols.rs  models.rs  objectid.rs  secret.rs  site.rs  streams.rs
crates/shared/src/database/: access.rs  certificate.rs  configuration.rs  dnsprovider.rs  websites.rs
crates/shared/src/models/: access.rs  certificate.rs  configuration.rs  dns.rs  dnsprovider.rs  websites.rs
crates/shared/src/site/: favicon.rs
crates/simple_shared/: Cargo.toml  build.rs
crates/simple_shared/src/: info.rs  lib.rs  objectid.rs
dashboard/: .prettierrc  Cargo.toml  eslint.config.ts  index.html  package.json  vite.config.ts
dashboard/backend/: Cargo.toml  Dockerfile
dashboard/backend/src/: auth.rs  certificate.rs  config.rs  ip.rs  main.rs  response.rs  router.rs
dashboard/backend/src/auth/: totp.rs
dashboard/backend/src/database/: auth.rs
dashboard/backend/src/ip/: cz88.rs  ip2region.rs  mmdb.rs
dashboard/backend/src/models/: auth.rs  log.rs
dashboard/backend/src/router/: access.rs  certificate.rs  dnsprovider.rs  log.rs  website.rs
dashboard/frontend/: .eslintrc.js  Dockerfile  default.conf.template  package.json  tsconfig.node.json  vite.config.ts
dashboard/frontend/run/: default.conf.template  entrypoint.sh
dashboard/frontend/src/: auth.ts  constant.ts  main.js  main.ts  theme.ts  types.ts  units.ts
dashboard/frontend/src/apis/: access.ts  certificate.ts  dnsproviders.ts  user.ts  websites.ts
dashboard/frontend/src/components/: Button.vue  DataView.vue  HeaderButton.vue  InputEdit.vue  Loading.vue  Panel.vue  PanelViewData.vue  SelectOptions.vue  SvgIcon.vue  Switchbar.vue  Theme.vue
dashboard/frontend/src/components/websites/: AddCertificate.vue  AddDNSProvider.vue  AddWebsite.vue  AddWebsiteBackend.vue
dashboard/frontend/src/components/websites/dnsproviders/: Tencent.vue
dashboard/frontend/src/pages/: Dashboard.vue
dashboard/frontend/src/pages/Dashboard/: Settings.vue  Statistics.vue  websites.vue
dashboard/frontend/src/pages/Dashboard/statistics/: QPS.vue  metrics.vue
dashboard/frontend/src/pages/Dashboard/websites/: CertificateManager.vue  Certificates.vue
dashboard/frontend/src/plugins/dialog/: index.ts
dashboard/frontend/src/plugins/presentation/: Presentation.vue
dashboard/frontend/src/types/: access.ts  certificate.ts  websites.ts
dashboard/src/: App.vue  api.ts  auth.ts  constant.ts  main.ts  theme.ts  types.ts  utils.ts
dashboard/src-rs/: auth.rs  certificate.rs  config.rs  foundation.rs  main.rs  mnt.rs  response.rs  router.rs
dashboard/src-rs/auth/: foundation.rs  jwt.rs
dashboard/src-rs/database/: auth.rs  log.rs
dashboard/src-rs/models/: auth.rs  log.rs
dashboard/src-rs/router/: certificate.rs  dnsprovider.rs  log.rs  website.rs
dashboard/src/apis/: certificate.ts  dnsproviders.ts  websites.ts
dashboard/src/components/: Button.vue  DragFileIntoInput.vue  InputEdit.vue  InputEditMuitlOptions.vue  InputEditOptions.vue  Menu.vue  Panel.vue  SelectOptions.vue  SvgIcon.vue  Table.vue  Theme.vue
dashboard/src/components/websites/: AddCertificate.vue  AddDNSProvider.vue  AddWebsite.vue  AddWebsiteBackend.vue
dashboard/src/components/websites/dnsproviders/: Tencent.vue
dashboard/src/pages/: Auth.vue  Dashboard.vue
dashboard/src/pages/Dashboard/: websites.vue
dashboard/src/pages/Dashboard/settings/: Log.vue
dashboard/src/pages/Dashboard/websites/: Certificates.vue  Certs.vue  DNSProviders.vue
dashboard/src/plugins/: Presentation.vue
dashboard/src/plugins/dialog/: Dialog.vue  DialogClose.vue  DialogContainer.vue  index.ts
dashboard/src/plugins/dialog/templates/: DraftContent.vue
dashboard/src/plugins/options/: Options.vue
dashboard/src/plugins/presentation/: Presentation.vue  index.ts
dashboard/src/types/: certificate.ts  dnsproviders.ts
gateway/: Cargo.toml  Dockerfile
gateway/src/: access.rs  config.rs  main.rs  proxy.rs  response.rs  state.rs  sync.rs  transport.rs
gateway/src/proxy/: backends.rs  protocols.rs
gateway/src/sync/: cert.rs  websites.rs
ipdb/: main.py  pyproject.toml
mnt/: Cargo.toml
mnt/src/: main.rs
(+17 files in other folders)
