[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.1"
utils = { path = "../crates/utils", version = "0.1.0" }
shared = { path = "../crates/shared", version = "0.1.0" }
tracing = "0.1.44"
serde_json = "1.0.149"
units-formatter = "0.1.1"
tower-http = { version = "0.6.8", features = ["catch-panic"] }
tokio_schedule = "0.3.2"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
totp-rs = { version = "5.7.0", features = ["qr", "serde_support"] }
rand = "0.10.0"
base64 = "0.22.1"
qrcode = "0.14.1"
chrono = { version = "0.4.43", features = ["serde"] }
async-trait = "0.1.89"


[[bin]]
name = "dashboard"
path = "src-rs/main.rs"
