[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.8.1", features = ["full", "client"] }
hyper-util = { version = "0.1.20", features = ["full"] }
protocols = { path = "../crates/protocols" }
tokio = { version = "1.49.0", features = ["full"] }
shared = { path = "../crates/shared" }
anyhow = "1.0.101"
tracing = "0.1.44"
utils = { path = "../crates/utils" }
rustls = "0.23.36"
tokio-rustls = "0.26.4"
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.4"
ttl_cache = "0.5.1"
regex = "1.12.3"
dashmap = "6.1.0"
http-body-util = { version = "0.1.3", features = ["full"] }
http-body = "1.0.1"
bytes = "1.11.1"
url = { version = "2.5.8", features = ["serde"] }
