[package]
name = "dnsprovider"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
reqwest = { version = "0.12.23", features = ["json"] }
ring = "0.17.14"
serde_json = "1.0.143"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
utils = { path = "../utils" }


[features]
default = ["dnspod"]
dnspod = []
