[package]
name = "simple_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres"] }
rand = "0.10.0"
hex = "0.4.3"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["io-util", "net"] }
num-traits = "0.2.19"
